--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,8 @@
 # These environment variables are needed to run the app locally.
 # Copy these into a file named .env to have them loaded automatically.
+KEYCLOAK_SERVER_URL: https://link-to-your-keycloak-server
+KEYCLOAK_REALM_ID_LOGIN: realm-id-login
+KEYCLOAK_REALM_ID: realm-id
+KEYCLOAK_CLIENT_ID: client-id
+KEYCLOAK_USERNAME: username
+KEYCLOAK_PASSWORD: password
